--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Randomizer</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="style.css"> </head>
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,6 @@
         <button id="done-button">Done</button>  -->
 </div>
     </div>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+      <script src="script.js"></script> </body>
 </body>
 </html>
