--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"> 
 </head>
 <body>
+    <h1>D* Lite Visualizer</h1> <div class="container">
     <div class="container">
         <div class="grid" id="grid-container">
             </div>
