Added the start robot function

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button id="button-c">C</button>
         <button id="button-d">D</button>
         <button id="calculate-path-button">Calculate Path</button>
+        <button id="start-button">Start</button>
 <!--         <button id="create-button">Create</button>
         <button id="done-button">Done</button>  -->
 </div>
